# fishydslib

./: .gitignore  CMakeLists.txt  FishyDsLib-API-Reference.mdx  LICENSE  README.md  clean-build-output.txt  vcpkg.json
.github/: copilot-instructions.md
benchmarks/: CMakeLists.txt  bench_cdn.cc  bench_core.cc  bench_format.cc  bench_gateway.cc  bench_http.cc  bench_json.cc  bench_multipart.cc
benchmarks/other_lang/: Makefile  bench_json.js  bench_json.py  package.json
build_asan/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_asan/Testing/Temporary/: CTestCostData.txt
build_asan/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_core  test_events_expansion  test_gateway  test_http  test_json  test_rest
client/: dc_client.c  dc_client.h  dc_commands.c  dc_commands.h
cmake/: fishyds_dependencies.cmake
core/: dc_alloc.c  dc_alloc.h  dc_allowed_mentions.c  dc_allowed_mentions.h  dc_attachments.c  dc_attachments.h  dc_cdn.c  dc_cdn.h  dc_data_uri.c  dc_data_uri.h  dc_env.c  dc_env.h  dc_format.c  dc_format.h  dc_log.c  dc_log.h  dc_optional.h  dc_platform.c  dc_platform.h  dc_snowflake.c  dc_snowflake.h  dc_status.c  dc_status.h  dc_string.c  dc_string.h  dc_time.c  dc_time.h  dc_vec.c  dc_vec.h
gw/: dc_events.c  dc_events.h  dc_gateway.c  dc_gateway.h  dc_gateway_codes.c
http/: dc_http.c  dc_http.h  dc_http_compliance.c  dc_http_compliance.h  dc_multipart.c  dc_multipart.h  dc_rest.c  dc_rest.h
json/: dc_json.c  dc_json.h  dc_json_component.c  dc_json_model.c  dc_json_model.h
model/: dc_attachment.c  dc_attachment.h  dc_channel.c  dc_channel.h  dc_component.c  dc_component.h  dc_embed.c  dc_embed.h  dc_guild.c  dc_guild.h  dc_guild_member.c  dc_guild_member.h  dc_interaction.c  dc_interaction.h  dc_message.c  dc_message.h  dc_model_common.h  dc_permissions.c  dc_permissions.h  dc_presence.c  dc_presence.h  dc_role.c  dc_role.h  dc_user.c  dc_user.h  dc_voice_state.c  dc_voice_state.h
tests/: CMakeLists.txt  test_alloc.c  test_allowed_mentions.c  test_attachments.c  test_cdn.c  test_client_api.c  test_core_main.c  test_data_uri.c  test_env.c  test_events_expansion.c  test_events_expansion_main.c  test_format.c  test_gateway.c  test_gateway_main.c  test_http.c  test_http_main.c  test_json.c  test_json_main.c  test_multipart.c  test_optional.c  test_permissions.c  test_rest.c  test_rest_main.c  test_snowflake.c  test_status.c  test_string.c  test_time.c  test_utils.c  test_utils.h  test_vec.c
